# PLN-SCC5908

./: .gitignore  Dockerfile  README.md
asr-api/: pyproject.toml
asr-api/asr_api/: app.py  asr_api.py  model_benchmark.py
asr-api/notebooks/: model_benchmark.py  test_whisper.ipynb
grammar-frontend/: index.html  package.json  pnpm-lock.yaml
grammar-frontend/src/: App.vue  main.ts
grammar-frontend/src/components/: TagWord.vue
grammar-frontend/src/composables/: useInteraction.ts
grammar-frontend/src/utils/: blobToBase64.ts  getTranscription.ts  recordAudio.ts
grammar-frontend/src/views/: NewSessionView.vue  TaggingView.vue  TextView.vue  TranscriptorView.vue
neural_model/: dataset.pkl  dataset_250603.pkl  dataset_new.pkl  dataset_noEM.pkl  final_df_250603.csv  final_df_250603.pkl  interaction_data.csv  interaction_data.pkl  interaction_data_250603.csv  interaction_data_250603.pkl  label_encoder.joblib  label_encoder_250603.joblib  merged_data.pkl  merged_data_250603.pkl  session_dat250603.pkl  session_data.csv  session_data.pkl  subsymbolic.ipynb  tokenized_dataset.joblib  tokenized_dataset_250603.joblib  tokenized_dataset_new.joblib
neural_model/best_model/: config.json
neural_model/best_model_kfold/: config.json
pln-api/: Dockerfile  README.md  pyproject.toml
pln-api/notebooks/: exercPLN01_representacaoTradicional.ipynb  firebase.ipynb  stanza.ipynb  symbolic.ipynb  whisper.ipynb
pln-api/notebooks/data/: frase_tags.pkl  interaction_data_250603.csv  new_session_data.csv  new_session_data_250603.csv  processed_phrases.json  processed_phrases_2.json
pln-api/pln_api/: app.py  audio_processing.py  text_processing.py
pos-api/: pyproject.toml
pos-api/notebooks/: lex_infantil.ipynb  out.txt  tagger_benchmark.py  test_spacy.ipynb  test_stanza.ipynb
pos-api/pos_api/: app.py  text_processing.py
