[project]
name = "asr-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonio Moreira",email = "antoniomoreira@pecege.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "faster-whisper (>=1.1.1,<2.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "jupyterlab (>=4.4.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
