[project]
name = "pos-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonio Moreira",email = "antoniomoreira@pecege.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "stanza (>=1.10.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.0"

